fixed page overflow in footer

--- a/index.css
+++ b/index.css
@@ -664,8 +664,8 @@ span {
         width: 100%;
         height: 28vh;
         padding: 45px 40px;
-        background-color: grey;
-        /* background-color: #E5E5E5; */
+        /* background-color: grey; */
+        background-color: #E5E5E5;
     }
     .container-3 {
         background-color: #0A2640;
@@ -712,12 +712,11 @@ span {
     .section-6 {
         width: 100%;
         background-color: #E5E5E5;
-        height: 100vh;
+        height: 65vh;
     }
     .footer {
         padding: 1em 0;
     }
-    
     .foot-brand {
         width: 80px;
         padding-left: 0px;
